NUP-2505: Remove win32 build from CI

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -41,12 +41,12 @@ environment:
       WHEEL_NAME_SUFFIX: "win_amd64"
 
     # Win32-gcc
-    - PYTHON_VERSION: "2.7.13"
-      PYTHON_ARCH: "32"
-      PYTHONHOME: "C:\\Python27"
-      NC_CMAKE_GENERATOR: "MinGW Makefiles"
-      EXTERNAL_STATIC_SUBDIR: "windows32-gcc"
-      WHEEL_NAME_SUFFIX: "win32"
+#    - PYTHON_VERSION: "2.7.13"
+#      PYTHON_ARCH: "32"
+#      PYTHONHOME: "C:\\Python27"
+#      NC_CMAKE_GENERATOR: "MinGW Makefiles"
+#      EXTERNAL_STATIC_SUBDIR: "windows32-gcc"
+#      WHEEL_NAME_SUFFIX: "win32"
 
 #---------------------------------#
 #       build configuration       #
